# PnR-framework

./: .gitignore  =1.0.0  =12  README.md  accelerate_config_mig.yaml  environment.yml  eval_morpheus_continual.py  eval_pnr.py  interactive_inference.py  plan.md  pyproject.toml  requirements.txt  run_training_multi_gpu.sh  run_training_single_gpu.sh  run_training_slurm.sh  setup_blackwell_env.sh  setup_env.sh  train_all_patches.py  train_base_adapter.py  train_monolithic_baseline.py  train_rag_baseline.py  train_recipe_baseline.py  train_rledit_baseline.py  train_xlora_baseline.py  validate_gpu_setup.py
examples/: router_demo.py
router_state/: summary.txt
scripts/: analyze_cot_lengths.py  benchmark_update_cost.py  build_counterfact_data.py  build_counterfact_relation_clusters.py  build_domain_classifier_data.py  build_edit_pairs.py  build_factuality_classifier_data.py  build_morpheus_knowledge_store.py  build_openstream_testset.py  build_openstream_testset_fresh.py  build_qm_conflict_pairs.py  build_qm_deval.py  build_qm_stable_facts.py  build_qm_train_data.py  build_recipe_qm_data.py  build_router_state.py  build_sqa_deval.py  build_triviaqa_dcontrol.py  compute_centroids.py  compute_judge_kappa.py  convert_edit_pairs_to_zsre.py  debug_recipe.py  deduplicate_documents.py  eval_recipe_teacher_forced.py  evaluate_rag.py  fit_openset_detector.py  index_documents.py  index_documents_advanced.py  inspect_model_output.py  merge_and_convert.sh  merge_eval_splits.py  plot_pareto.py  plot_update_cost_scaling.py  probe_router_routing.py  query_rag.py  run_openstream_mitigation.py  run_openstream_stress.py  sample_for_human_calibration.py  score_with_judge.py  setup_openwebui.sh  (+9 more)
slurm/: benchmark_update_cost.sh  build_morpheus_knowledge_store.sh  build_morpheus_qm_knowledge_store.sh  build_qm_conflict_pairs.sh  build_router_state.sh  build_sqa_deval.sh  build_triviaqa_dcalibration.sh  build_triviaqa_dcontrol.sh  (+35 more)
(+82 files in other folders)
